Dcreator/src/objects/Battle_Station__c.object
<CustomObject>
    <fields>
        <fullName>Crew_Members__c</fullName>
        <label>Crew Members</label>
        <summarizedField>Resource__c.Quantity__c</summarizedField>
        <summaryForeignKey>Resource__c.Battle_Station__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weapons_Status__c</fullName>
        <label>Weapons Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Operational</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Battle Station</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Battle Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battle Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>